<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/quiz_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro"
            android:textColor="#000"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            />

        <TextView
            android:id="@+id/quiz_intro_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_2"
            android:textColor="#000"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginBottom="40dp"/>

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/name_placeholder"
            android:inputType="textCapWords" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_quiz_button"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"
            />

    </LinearLayout>

</ScrollView>
