<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/question_six_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_six"
            android:textColor="#000"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="40dp"
                android:onClick="goToFifthQuestion"
                android:text="@string/previous_question" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="40dp"
                android:onClick="goToSummary"
                android:text="@string/check_answers" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>